agregando la interfaz de agregar productos

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,3 @@
-<!-- PROYECTO_PY/templates/dashboard.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -31,7 +30,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="#inventario">
+                <a href="{{ url_for('add_product') }}">
                     <h3>Inventario</h3>
                     <p>Gestión de inventario</p>
                 </a>
