--- a/static/styles_add_product.css
+++ b/static/styles_add_product.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-    max-width: 500px;
+    max-width: 600px;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
@@ -19,38 +19,52 @@ h1 {
     color: #333;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+}
+
 .form-group {
     margin-bottom: 15px;
 }
 
-label {
-    display: block;
+.form-group label {
     margin-bottom: 5px;
     color: #555;
 }
 
-input[type="text"],
-input[type="number"],
-input[type="file"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
+.form-group input {
+    padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box;
+    width: calc(100% - 16px);
 }
 
-button {
-    width: 100%;
-    padding: 10px;
+.form-group input[type="file"] {
+    padding: 3px;
+}
+
+.form-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+button, .button {
+    padding: 10px 20px;
     background-color: #007bff;
     color: white;
+    text-decoration: none;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    text-align: center;
 }
 
-button:hover {
+button:hover, .button:hover {
     background-color: #0056b3;
+}
+
+.button {
+    display: inline-block;
+    margin-top: 10px;
 }
