--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Agregar Producto</h1>
-        <form action="/add_product" method="POST" enctype="multipart/form-data">
+        <form action="{{ url_for('add_product') }}" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="marca">Marca:</label>
                 <input type="text" id="marca" name="marca" required>
@@ -36,10 +36,14 @@
             </div>
             <div class="form-group">
                 <label for="imagen">Imagen:</label>
-                <input type="file" id="imagen" name="imagen" accept="image/*">
+                <input type="file" id="imagen" name="imagen" required>
             </div>
-            <button type="submit">Agregar Producto</button>
+            <div class="form-buttons">
+                <button type="submit">Agregar Producto</button>
+                <a href="{{ url_for('see_products') }}" class="button">Ver Productos</a>
+            </div>
         </form>
+        <a href="{{ url_for('dashboard') }}" class="button">Volver al Dashboard</a>
     </div>
 </body>
 </html>
