--- a/static/styles_add_product.css
+++ b/static/styles_add_product.css
@@ -61,7 +61,7 @@ button, .button {
 }
 
 button:hover, .button:hover {
-    background-color: #0056b3;
+    background-color: #00b33c;
 }
 
 .button {
