--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -29,6 +29,12 @@
             <label for="talla">Talla:</label>
             <input type="number" id="talla" name="talla" required>
 
+            <label for="tipo">Tipo:</label> <!-- Nuevo campo -->
+            <select id="tipo" name="tipo" required>
+                <option value="Deportivo">Deportivo</option>
+                <option value="Piso">Piso</option>
+            </select>
+
             <label for="imagen">Imagen:</label>
             <input type="file" id="imagen" name="imagen">
 
