--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -18,6 +18,7 @@
                     <th>Existencias</th>
                     <th>Precio</th>
                     <th>Talla</th>
+                    <th>Tipo</th>
                     <th>Imagen</th>
                 </tr>
             </thead>
@@ -30,6 +31,7 @@
                     <td>{{ producto.existencias }}</td>
                     <td>{{ producto.precio }}</td>
                     <td>{{ producto.talla }}</td>
+                    <td>{{ producto.tipo }}</td>
                     <td><img src="{{ url_for('static', filename='images/' ~ producto.imagen_nombre) }}" alt="{{ producto.modelo }}" width="50"></td>
                 </tr>
                 {% endfor %}
