--- a/static/styles_see_products.css
+++ b/static/styles_see_products.css
@@ -73,3 +73,23 @@ td img {
 .button:hover {
     background-color: #0056b3;
 }
+
+/* Estilos para la barra de búsqueda */
+.search-form {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.search-form input[type="text"] {
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.search-form .button {
+    padding: 10px 20px;
+    margin-top: 0;
+}
