--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ver Productos</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_products.css') }}">
+    <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
 </head>
 <body>
     <div class="container">
@@ -12,7 +13,33 @@
         <form action="{{ url_for('see_products') }}" method="post" class="search-form">
             <input type="text" name="search" placeholder="Buscar productos..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
+            <button type="button" class="button" onclick="toggleFilters()">Filtros Adicionales</button>
         </form>
+        <div id="additionalFilters" style="display: none;">
+            <form action="{{ url_for('see_products') }}" method="post" class="filter-form">
+                <div>
+                    <label for="marca">Marca:</label>
+                    <input type="text" id="marca" name="marca">
+                </div>
+                <div>
+                    <label for="modelo">Modelo:</label>
+                    <input type="text" id="modelo" name="modelo">
+                </div>
+                <div>
+                    <label for="color">Color:</label>
+                    <input type="text" id="color" name="color">
+                </div>
+                <div>
+                    <label for="talla">Talla:</label>
+                    <input type="number" id="talla" name="talla">
+                </div>
+                <div>
+                    <label for="tipo">Tipo:</label>
+                    <input type="text" id="tipo" name="tipo">
+                </div>
+                <button type="submit" class="button">Aplicar Filtros</button>
+            </form>
+        </div>
         <table>
             <thead>
                 <tr>
