--- a/static/styles_see_products.css
+++ b/static/styles_see_products.css
@@ -98,3 +98,57 @@ td img {
 .search-form .button + .button {
     margin-left: 20px; /* Añadir un margen de 10px entre los botones */
 }
+
+/* Estilos para el menú desplegable */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #f8f9fa;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a, .dropdown-content form {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover, .dropdown-content form:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #e2e6ea;
+}
+
+.button.delete-button {
+    background-color: #dc3545;
+    border: none;
+    color: white;
+    text-align: left;
+    padding: 12px 16px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.button.delete-button:hover {
+    background-color: #c82333;
+}
