--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ver Productos</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_products.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
 </head>
 <body>
@@ -51,6 +52,7 @@
                     <th>Talla</th>
                     <th>Tipo</th>
                     <th>Imagen</th>
+                    <th>Acciones</th> <!-- Nueva columna para el menú desplegable -->
                 </tr>
             </thead>
             <tbody>
@@ -64,6 +66,17 @@
                     <td>{{ producto.talla }}</td>
                     <td>{{ producto.tipo }}</td>
                     <td><img src="{{ url_for('static', filename='images/' ~ producto.imagen_nombre) }}" alt="{{ producto.modelo }}" width="50"></td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="dropbtn"><i class="fas fa-ellipsis-v"></i></button>
+                            <div class="dropdown-content">
+                                <a href="{{ url_for('edit_product', id=producto.ProductoID) }}">Editar</a>
+                                <form action="{{ url_for('delete_product', id=producto.ProductoID) }}" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar este producto?');">
+                                    <button type="submit" class="delete-button">Eliminar</button>
+                                </form>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
