correcciones menores del edit y del delete

--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -52,7 +52,7 @@
                     <th>Talla</th>
                     <th>Tipo</th>
                     <th>Imagen</th>
-                    <th>Acciones</th> <!-- Nueva columna para el menú desplegable -->
+                    <th></th> <!-- Nueva columna para el menú desplegable -->
                 </tr>
             </thead>
             <tbody>
