--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_products.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script> <!-- Referencia al nuevo archivo JS -->
 </head>
 <body>
     <div class="container">
@@ -68,8 +69,8 @@
                     <td><img src="{{ url_for('static', filename='images/' ~ producto.imagen_nombre) }}" alt="{{ producto.modelo }}" width="50"></td>
                     <td>
                         <div class="dropdown">
-                            <button class="dropbtn"><i class="fas fa-ellipsis-v"></i></button>
-                            <div class="dropdown-content">
+                            <button class="dropbtn" onclick="toggleMenu('menu-{{ producto.ProductoID }}')"><i class="fas fa-ellipsis-v"></i></button>
+                            <div id="menu-{{ producto.ProductoID }}" class="dropdown-content">
                                 <a href="{{ url_for('edit_product', id=producto.ProductoID) }}">Editar</a>
                                 <form action="{{ url_for('delete_product', id=producto.ProductoID) }}" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar este producto?');">
                                     <button type="submit" class="delete-button">Eliminar</button>
