ajuste de reglas de integridad

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -33,7 +33,7 @@
             <input type="number" step="0.01" id="precio" name="precio" required>
 
             <label for="talla">Talla:</label>
-            <input type="number" id="talla" name="talla" required>
+            <input type="number" step="0.1" id="talla" name="talla" required>
 
             <label for="tipo">Tipo:</label>
             <select id="tipo" name="tipo" required>
