--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -16,6 +16,12 @@
             <p style="color: green;">{{ message }}</p>
         {% endif %}
 
+        <!-- Mostrar el mensaje de error si existe -->
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+
+
         <form action="{{ url_for('add_product') }}" method="post" enctype="multipart/form-data">
             <label for="marca">Marca:</label>
             <input type="text" id="marca" name="marca" required>
