--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -9,6 +9,17 @@
 <body>
     <div class="container">
         <h1>Editar Producto</h1>
+
+        <!-- Mostrar el mensaje de confirmación si existe -->
+        {% if message %}
+            <p class="message success">{{ message }}</p>
+        {% endif %}
+
+        <!-- Mostrar el mensaje de error si existe -->
+        {% if error %}
+            <p class="message error">{{ error }}</p>
+        {% endif %}
+
         <form action="{{ url_for('edit_product', id=producto['ProductoID']) }}" method="post" enctype="multipart/form-data">
             <label for="marca">Marca</label>
             <input type="text" id="marca" name="marca" value="{{ producto['marca'] }}" required>
@@ -26,7 +37,7 @@
             <input type="number" step="0.01" id="precio" name="precio" value="{{ producto['precio'] }}" required>
 
             <label for="talla">Talla</label>
-            <input type="number" id="talla" name="talla" value="{{ producto['talla'] }}" required>
+            <input type="number"  step="0.01" id="talla" name="talla" value="{{ producto['talla'] }}" required>
 
             <label for="tipo">Tipo</label>
             <input type="text" id="tipo" name="tipo" value="{{ producto['tipo'] }}" required>
