--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -20,7 +20,7 @@
             <p class="message error">{{ error }}</p>
         {% endif %}
 
-        <form action="{{ url_for('edit_product', id=producto['ProductoID']) }}" method="post" enctype="multipart/form-data">
+        <form id="editProductForm" action="{{ url_for('edit_product', id=producto['ProductoID']) }}" method="post" enctype="multipart/form-data">
             <label for="marca">Marca</label>
             <input type="text" id="marca" name="marca" value="{{ producto['marca'] }}" required>
 
@@ -37,11 +37,14 @@
             <input type="number" step="0.01" id="precio" name="precio" value="{{ producto['precio'] }}" required>
 
             <label for="talla">Talla</label>
-            <input type="number"  step="0.01" id="talla" name="talla" value="{{ producto['talla'] }}" required>
+            <input type="number" step="0.01" id="talla" name="talla" value="{{ producto['talla'] }}" required>
 
-            <label for="tipo">Tipo</label>
-            <input type="text" id="tipo" name="tipo" value="{{ producto['tipo'] }}" required>
-
+            <label for="tipo">Tipo:</label>
+            <select id="tipo" name="tipo" required>
+                <option value="Deportivo">Deportivo</option>
+                <option value="Piso">Piso</option>
+            </select>
+            
             <label for="imagen">Imagen</label>
             <input type="file" id="imagen" name="imagen">
             <div class="image-preview">
@@ -49,10 +52,15 @@
             </div>
 
             <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                <button type="submit" id="saveChangesButton" class="btn btn-primary">Guardar Cambios</button>
                 <a href="{{ url_for('see_products') }}" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
+
+    <script>
+        var redirectUrl = "{{ url_for('see_products') }}";
+    </script>
+    <script src="{{ url_for('static', filename='js/redirect.js') }}"></script>
 </body>
 </html>
