--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_see_products.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="{{ url_for('static', filename='js/filtro.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script> <!-- Referencia al nuevo archivo JS -->
+    <script src="{{ url_for('static', filename='js/menu_toggle.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/order_options.js') }}"></script> <!-- Referencia al nuevo archivo JS -->
 </head>
 <body>
     <a href="{{ url_for('add_product') }}" class="button back-button">Volver</a>
@@ -17,6 +18,7 @@
             <input type="text" name="search" placeholder="Buscar productos..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
             <button type="button" class="button" onclick="toggleFilters()">Filtros Adicionales</button>
+            <button type="button" class="button" onclick="showOrderOptions()">Ordenar</button>
         </form>
         <div id="additionalFilters" style="display: none;">
             <form action="{{ url_for('see_products') }}" method="post" class="filter-form">
@@ -45,6 +47,11 @@
                 </div>
                 <button type="submit" class="button">Aplicar Filtros</button>
             </form>
+        </div>
+        <div id="order-options" style="display:none;">
+            <a href="{{ url_for('see_products', order='precio') }}" class="button">Por Precio</a>
+            <a href="{{ url_for('see_products', order='existencias') }}" class="button">Por Existencias</a>
+            <a href="{{ url_for('see_products', order='marca') }}" class="button">Por Marca</a>
         </div>
         <table>
             <thead>
