el atributo modelo ya puede estar vacio

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -26,7 +26,7 @@
             <input type="text" id="marca" name="marca" value="{{ form_data['marca'] if 'marca' in form_data else '' }}" required>
 
             <label for="modelo">Modelo:</label>
-            <input type="text" id="modelo" name="modelo" value="{{ form_data['modelo'] if 'modelo' in form_data else '' }}" required>
+            <input type="text" id="modelo" name="modelo" value="{{ form_data['modelo'] if 'modelo' in form_data else '' }}">
 
             <label for="color">Color:</label>
             <input type="text" id="color" name="color" value="{{ form_data['color'] if 'color' in form_data else '' }}" required>
