--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -25,7 +25,7 @@
             <input type="text" id="marca" name="marca" value="{{ producto['marca'] }}" required>
 
             <label for="modelo">Modelo</label>
-            <input type="text" id="modelo" name="modelo" value="{{ producto['modelo'] }}" required>
+            <input type="text" id="modelo" name="modelo" value="{{ producto['modelo'] }}" >
 
             <label for="color">Color</label>
             <input type="text" id="color" name="color" value="{{ producto['color'] }}" required>
