--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
         <p>Has iniciado sesión correctamente.</p>
         <div class="grid-container">
             <div class="grid-item">
-                <a href="#clientes">
+                <a href="{{ url_for('clientes.add_cliente') }}">
                     <h3>Clientes</h3>
                     <p>Gestión de clientes</p>
                 </a>
