--- a/templates/add_cliente.html
+++ b/templates/add_cliente.html
@@ -7,20 +7,36 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles_add_cliente.css') }}">
 </head>
 <body>
-    <form action="{{ url_for('clientes.add_cliente') }}" method="post">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z ]+">
+    <a href="{{ url_for('dashboard') }}" class="button dashboard-button">Volver al Menu</a>
+    <div class="container">
+        <h1>Agregar Cliente</h1>
+        
+        <!-- Mostrar el mensaje de confirmación si existe -->
+        {% if message %}
+            <p style="color: green;">{{ message }}</p>
+        {% endif %}
 
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z ]+">
+        <!-- Mostrar el mensaje de error si existe -->
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
 
-        <label for="domicilio">Domicilio:</label>
-        <input type="text" id="domicilio" name="domicilio" required pattern="[a-zA-Z0-9 ]+">
+        <form action="{{ url_for('clientes.add_cliente') }}" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" value="{{ form_data['nombre'] if 'nombre' in form_data else '' }}" required pattern="[a-zA-Z ]+">
 
-        <label for="telefono">Teléfono:</label>
-        <input type="text" id="telefono" name="telefono" required pattern="[0-9]{10}">
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" value="{{ form_data['apellido'] if 'apellido' in form_data else '' }}" required pattern="[a-zA-Z ]+">
 
-        <button type="submit">Agregar Cliente</button>
-    </form>
+            <label for="domicilio">Domicilio:</label>
+            <input type="text" id="domicilio" name="domicilio" value="{{ form_data['domicilio'] if 'domicilio' in form_data else '' }}" required pattern="[a-zA-Z0-9 ]+">
+
+            <label for="telefono">Teléfono:</label>
+            <input type="text" id="telefono" name="telefono" value="{{ form_data['telefono'] if 'telefono' in form_data else '' }}" required pattern="[0-9]{10}">
+
+            <button type="submit" class="button">Agregar Cliente</button>
+            <a href="{{ url_for('clientes.see_clientes') }}" class="button">Ver Clientes</a>
+        </form>
+    </div>
 </body>
 </html>
