--- a/templates/see_clientes.html
+++ b/templates/see_clientes.html
@@ -56,6 +56,7 @@
                     <th>Apellido</th>
                     <th>Domicilio</th>
                     <th>Teléfono</th>
+                    <th></th> <!-- Nueva columna para el menú desplegable -->
                 </tr>
             </thead>
             <tbody>
@@ -65,6 +66,17 @@
                     <td>{{ cliente.Apellido }}</td>
                     <td>{{ cliente.Domicilio }}</td>
                     <td>{{ cliente.Telefono }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="dropbtn" onclick="toggleMenu('menu-{{ cliente.ClienteID }}')"><i class="fas fa-ellipsis-v"></i></button>
+                            <div id="menu-{{ cliente.ClienteID }}" class="dropdown-content">
+                                <a href="{{ url_for('clientes.edit_cliente', id=cliente.ClienteID) }}">Editar</a>
+                                <form action="{{ url_for('clientes.delete_cliente', id=cliente.ClienteID) }}" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar este cliente?');">
+                                    <button type="submit" class="delete-button">Eliminar</button>
+                                </form>
+                            </div>
+                        </div>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
