--- a/templates/see_clientes.html
+++ b/templates/see_clientes.html
@@ -17,7 +17,7 @@
         <form action="{{ url_for('clientes.see_clientes') }}" method="post" class="search-form">
             <input type="text" name="search" placeholder="Buscar clientes..." value="{{ search_query }}">
             <button type="submit" class="button">Buscar</button>
-            <button type="button" class="button" onclick="toggleFilters()">Filtros Adicionales</button>
+            <button type="button" class="button" onclick="toggleFilters()">Filtros</button>
             <button type="button" class="button" onclick="showOrderOptions()">Ordenar</button>
         </form>
         <div id="additionalFilters" style="display: none;">
