--- a/static/styles_add_cliente.css
+++ b/static/styles_add_cliente.css
@@ -60,3 +60,21 @@ input[type="text"] {
     margin-left: 310px;
     margin-top: 120px;
 }
+
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
