--- a/templates/see_products.html
+++ b/templates/see_products.html
@@ -89,6 +89,7 @@
                                 <form action="{{ url_for('delete_product', id=producto.ProductoID) }}" method="post" onsubmit="return confirm('¿Seguro que deseas eliminar este producto?');">
                                     <button type="submit" class="delete-button">Eliminar</button>
                                 </form>
+                                <a href="{{ url_for('ventas.escoger_cliente', producto_id=producto.ProductoID) }}">Realizar Venta</a>
                             </div>
                         </div>
                     </td>
