--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="#ventas">
+                <a href="{{ url_for('see_products') }}">
                     <h3>Ventas</h3>
                     <p>Gestión de ventas</p>
                 </a>
